# weatheralert

./: .env.template  .gitignore  README.md  RUNTIME_INSTRUCTIONS.md  app.py  constants.py  database.db  database_connection_manager.py  db.py  main.py  manager.py  pyproject.toml  requirements.txt  settings.txt  setup.cfg  start_up.sh  utils.py  weather_alert_logging.py  weather_data.db  weatheralert.db
app/: __init__.py  fetch_data.py  models.py  routes.py  setup.py
app/templates/: base.html  index.html  table.html
data/: app.db
templates/: base.html  data.html  error.html  settings.html
tests/: test_database.py  test_utils.py
weatheralert/: .gitignore  __init__.py  alertus.py  db.py  db_handler.py  forecast.py  settings.txt  weatheralert.db  weatheralert.py
weatheralert/templates/: base.html
weatheralert/templates/home/: home.html  update_data.html
