[metadata]
name = weatheralert
author = Samuel Naranjo
description = Alertus Python Developer Candidate.
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

project_urls =
    Source = https://github.com/snaraj/weatheralert

[options]
python_requires = >=3.8
packages = find:
install_requires = 
    Flask >= 2.0.2
    Jinja2 >= 3.0.3
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.2.5
    pytest-cov>=2.0
    mypy>=0.931
    flak8>=4.0.1
    tox>=3.24.5

[options.package_data]
weatheralert = py.typed

[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601
max-line-length = 119